--- a/OneDrive/Desktop/flask-k8s-pipeline/Dockerfile
+++ b/OneDrive/Desktop/flask-k8s-pipeline/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.11-slim
+FROM python:3.10-slim
 
 WORKDIR /app
 
@@ -6,5 +6,7 @@ COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 
 COPY . .
+
+EXPOSE 5000
 
 CMD ["python", "app.py"]
