--- a/OneDrive/Desktop/flask-k8s-pipeline/k8s/deployment.yaml
+++ b/OneDrive/Desktop/flask-k8s-pipeline/k8s/deployment.yaml
@@ -1,9 +1,9 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: flask-app
+  name: flask-deployment
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: flask-app
@@ -13,27 +13,20 @@ spec:
         app: flask-app
     spec:
       containers:
-      - name: flask-app
-        image: your-dockerhub-username/flask-k8s:latest
+      - name: flask-container
+        image: sukruthgowdams/flask-k8s:latest
         ports:
         - containerPort: 5000
-        readinessProbe:
-          httpGet:
-            path: /health
-            port: 5000
-          initialDelaySeconds: 5
-          periodSeconds: 5
-
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: flask-service
 spec:
+  type: LoadBalancer
   selector:
     app: flask-app
   ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 5000
-  type: NodePort
+  - protocol: TCP
+    port: 80
+    targetPort: 5000
